# godot-rust-cli

./: .travis.yml  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs
.github/workflows/: godot-rust-cli.yml  main.yml
docker/: Dockerfile.x86_64-pc-windows-gnu  Dockerfile.x86_64-unknown-linux-gnu  scl_enable
docs/: package-lock.json  package.json
docs/.temp/: style.styl
docs/.temp/app-enhancers/: 0.js  1.js  global-components-2.js  global-components-3.js  global-components-4.js  global-components-5.js  global-components-6.js
docs/.temp/internal/: app-enhancers.js  layout-components.js  page-components.js  root-mixins.js  routes.js  siteData.js
docs/commands/: command-build.md  command-create.md  command-destroy.md  command-new.md  command-platform.md
docs/docs/: README.md
docs/docs/.vuepress/: config.js
docs/docs/.vuepress/components/: Divider.vue  Features.vue  Footer.vue  Logo.vue
docs/docs/guide/: README.md  api.md  compatibility.md  getting-started.md
docs/tutorials/: basic-usage.md  creating-a-godot-plugin.md  platforms.md
src/: build_utils.rs  cargo_config.rs  commands.rs  config.rs  definitions.rs  gdnlib.rs  gdns_file.rs  library.rs  log_utils.rs  main.rs  plugin_config.rs  utils.rs
src/commands/: build.rs  create.rs  destroy.rs  new.rs  platform.rs  target.rs
src/templates/: gdnlib.txt  gdns.txt  lib.rs  mod-plugin.rs  mod.rs  plugin-cfg.txt
src/utils/: config.rs  cross.rs  dynamic_library.rs  file.rs  gdnlib.rs  lib.rs  log.rs  path.rs  time.rs
tests/: command-build.rs  command-create.rs  command-destroy.rs  command-new.rs  command-platform.rs  command-plugin.rs  test_utilities.rs
