[package]
name = "godot-rust-cli"
version = "0.1.2"
authors = ["Robert Corponoi <robertcorponoi@gmail.com>"]
license = "MIT"
description = "Provides an easy way to use Rust with your Godot project"
homepage = "https://github.com/robertcorponoi/godot-rust-cli"
repository = "https://github.com/robertcorponoi/godot-rust-cli"
readme = "README.md"
keywords = ["godot", "rust", "module", "NativeScript", "gdnlib"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
serde = { version = "1.0.118", features = ["derive"] }
toml = "0.5.8"
regex = "1.4.3"
colored = "2.0.0"
notify = "4.0.15"
chrono = "0.4.19"
dunce = "1.0.1"
syn = { version = "1.0", features = ["full", "parsing", "printing", "visit", "visit-mut", "extra-traits"] }
convert_case = "0.4.0"

[dev-dependencies]
assert_cmd = "1.0.2"
predicates = "1.0.6"