[package]
name = "godot-rust-cli"
version = "0.4.0"
authors = ["Robert Corponoi <robertcorponoi@gmail.com>"]
license = "MIT"
description = "Provides an easy way to use Rust with your Godot project"
homepage = "https://github.com/robertcorponoi/godot-rust-cli"
repository = "https://github.com/robertcorponoi/godot-rust-cli"
readme = "README.md"
keywords = ["godot", "rust", "module", "NativeScript", "gdnlib"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
toml = "0.5.9"
regex = "1.6.0"
colored = "2"
notify = "4.0.17"
chrono = "0.4.19"
dunce = "1.0.2"
syn = { version = "1.0.98", features = ["full", "parsing", "printing", "visit", "visit-mut", "extra-traits"] }
convert_case = "0.5.0"
walkdir = "2.3.2"
lazy_static = "1.4.0"
rust-codegen = "0.1.1"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"